# fetchx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  build-deb.sh  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  distro_logo.yml  feature_request.yml
.github/actions/ci-issue/: action.yml
.github/workflows/: branch-protection.yml  ci-issue-handler.yml  ci.yml  pr-automation.yml  release.yml
assets/: config.example.toml
aur/fetchx/: .SRCINFO  PKGBUILD
aur/fetchx-git/: .SRCINFO  PKGBUILD
debian/: changelog  control  copyright  fetchx.1  fetchx.bash-completion  fetchx.desktop  fetchx.zsh-completion  rules  watch
homebrew/: fetchx.rb
homebrew/Formula/: fetchx.rb
src/: image_cache.rs  main.rs
src/ascii/: mod.rs
src/colors/: mod.rs
src/config/: mod.rs
src/display/: mod.rs
src/image_backend/: mod.rs
src/system/: mod.rs
src/utils/: mod.rs
