[package]
name = "fetchx"
version = "0.1.0"
edition = "2021"
description = "A fast, modern system information tool written in Rust"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
colored = "2.1"
unicode-width = "0.2"
atty = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
